[gd_scene load_steps=4 format=3 uid="uid://player123456"]

[ext_resource type="Script" path="res://scripts/player/Player.gd" id="1"]

[sub_resource type="Gradient" id="Gradient_1"]
colors = PackedColorArray(0.2, 0.5, 1, 1, 0.4, 0.7, 1, 1)

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_1"]
points = PackedVector2Array(-12, 15, 0, -15, 12, 15)

[node name="Player" type="Area2D"]
script = ExtResource("1")

[node name="Sprite" type="Polygon2D" parent="."]
color = Color(0.3, 0.6, 1, 1)
polygon = PackedVector2Array(0, -20, -15, 20, -10, 15, -5, 20, 0, 10, 5, 20, 10, 15, 15, 20, 0, -20)

[node name="Engine" type="Polygon2D" parent="."]
z_index = -1
color = Color(1, 0.5, 0, 1)
polygon = PackedVector2Array(-5, 20, -3, 30, 0, 25, 3, 30, 5, 20)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("ConvexPolygonShape2D_1")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.15
autostart = true

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="MuzzlePosition" type="Marker2D" parent="."]
position = Vector2(0, -25)

[node name="LeftMuzzle" type="Marker2D" parent="."]
position = Vector2(-10, -15)

[node name="RightMuzzle" type="Marker2D" parent="."]
position = Vector2(10, -15)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_invulnerability_timer_timeout"]